lib/generated/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(all) {
              return ast('Joy').add(unroll(null, all))
          },
      peg$c1 = peg$anyExpectation(),
      peg$c2 = function() {
              return ast('Text').set('value', text())
          },
      peg$c3 = function() {
              return ast('Escape')
          },
      peg$c4 = "*",
      peg$c5 = peg$literalExpectation("*", false),
      peg$c6 = function() {
              return ast('Comment').set('value', text())
          },
      peg$c7 = "import",
      peg$c8 = peg$literalExpectation("import", false),
      peg$c9 = "from",
      peg$c10 = peg$literalExpectation("from", false),
      peg$c11 = function(pairs, path) {
              var res = ast('Import').add(path).set('value', text().substr(1))

              if (pairs) {
                  res.add(pairs[1])
              }

              return res
          },
      peg$c12 = "as",
      peg$c13 = peg$literalExpectation("as", false),
      peg$c14 = function(what, rename) {
              var res = ast('ImportPair').add(what)

              if (rename) {
                  res.add(rename[3]).set('withRename', true)
              }

              return res
          },
      peg$c15 = function() {
              return ast('ImportAll')
          },
      peg$c16 = "if",
      peg$c17 = peg$literalExpectation("if", false),
      peg$c18 = "else",
      peg$c19 = peg$literalExpectation("else", false),
      peg$c20 = function(cwe, cwes, cwte) {
              var res = ast('Condition').add(unroll(cwe, cwes, 5))

              if (cwte) {
                  res.add(cwte[3]).set('withElse', true)
              }

              return res
          },
      peg$c21 = function(expr, block) {
              return ast('ConditionWithExpression').add(expr).add(block)
          },
      peg$c22 = function(block) {
              return ast('ConditionWithoutExpression').add(block)
          },
      peg$c23 = "each",
      peg$c24 = peg$literalExpectation("each", false),
      peg$c25 = "in",
      peg$c26 = peg$literalExpectation("in", false),
      peg$c27 = function(lp, items, block) {
              block.set('isLoop', true);

              return ast('Loop').add(lp).add(items).add(block)
          },
      peg$c28 = ":",
      peg$c29 = peg$literalExpectation(":", false),
      peg$c30 = function(key, item) {
              return ast('KeyValue').add(key).add(item).set('defaultIndex', false)
          },
      peg$c31 = function(item) {
              return ast('KeyValue').add(item).set('defaultIndex', true)
          },
      peg$c32 = function(escape, id) {
              return joyAddAttr(escape, ast('Fn').add(id), {
                  escape: true
              }, {
                   escape: false
              })
          },
      peg$c33 = function(id, args, block) {
              return ast('FnIdentifier').add(id).add(args).add(block)
          },
      peg$c34 = function(type, types) {
              return ast('Arguments').add(unroll(type, types, 3))
          },
      peg$c35 = "=",
      peg$c36 = peg$literalExpectation("=", false),
      peg$c37 = function(name, value) {
              return ast('NamedArgument').add(name).add(value)
          },
      peg$c38 = function() {
              return ast('InBlockEscape').set('value', text())
          },
      peg$c39 = function(joy) {
              return ast('Block').add(joy)
          },
      peg$c40 = function(escape, id) {
              return joyAddAttr(escape, ast('Variable').add(id), {
                  escape: true
              }, {
                   escape: false
              })
          },
      peg$c41 = function(name, names) {
              return ast('Identifier').add(unroll(name, names, 1))
          },
      peg$c42 = function(n) {
              return ast('Name').set('value', text())
          },
      peg$c43 = function(expr) {
              return ast('ExpressionBlock').add(expr)
          },
      peg$c44 = function(l, o, r) {
              return ast('Binary').add(l).add(r).set('operator', o)
          },
      peg$c45 = function(o, r) {
              return ast('Unary').add(r).set('operator', o)
          },
      peg$c46 = ".",
      peg$c47 = peg$literalExpectation(".", false),
      peg$c48 = function() {
              return ast('Number').set('value', text())
          },
      peg$c49 = function() {
              return ast('Boolean').set('value', text())
          },
      peg$c50 = function() {
              return ast('NULL')
          },
      peg$c51 = function() {
              return ast('Undefined')
          },
      peg$c52 = "\"",
      peg$c53 = peg$literalExpectation("\"", false),
      peg$c54 = /^[^\r\n\f\\"]/,
      peg$c55 = peg$classExpectation(["\r", "\n", "\f", "\\", "\""], true, false),
      peg$c56 = "\\\"",
      peg$c57 = peg$literalExpectation("\\\"", false),
      peg$c58 = "'",
      peg$c59 = peg$literalExpectation("'", false),
      peg$c60 = /^[^\r\n\f\\']/,
      peg$c61 = peg$classExpectation(["\r", "\n", "\f", "\\", "'"], true, false),
      peg$c62 = "\\'",
      peg$c63 = peg$literalExpectation("\\'", false),
      peg$c64 = function() {
              return ast('String').set('value', text())
          },
      peg$c65 = "@",
      peg$c66 = peg$literalExpectation("@", false),
      peg$c67 = /^[a-z]/,
      peg$c68 = peg$classExpectation([["a", "z"]], false, false),
      peg$c69 = /^[A-Z]/,
      peg$c70 = peg$classExpectation([["A", "Z"]], false, false),
      peg$c71 = /^[0-9]/,
      peg$c72 = peg$classExpectation([["0", "9"]], false, false),
      peg$c73 = /^[_$]/,
      peg$c74 = peg$classExpectation(["_", "$"], false, false),
      peg$c75 = "{",
      peg$c76 = peg$literalExpectation("{", false),
      peg$c77 = "}",
      peg$c78 = peg$literalExpectation("}", false),
      peg$c79 = "!",
      peg$c80 = peg$literalExpectation("!", false),
      peg$c81 = "(",
      peg$c82 = peg$literalExpectation("(", false),
      peg$c83 = ")",
      peg$c84 = peg$literalExpectation(")", false),
      peg$c85 = "\\{",
      peg$c86 = peg$literalExpectation("\\{", false),
      peg$c87 = "\\}",
      peg$c88 = peg$literalExpectation("\\}", false),
      peg$c89 = ",",
      peg$c90 = peg$literalExpectation(",", false),
      peg$c91 = "undefined",
      peg$c92 = peg$literalExpectation("undefined", false),
      peg$c93 = "null",
      peg$c94 = peg$literalExpectation("null", false),
      peg$c95 = "true",
      peg$c96 = peg$literalExpectation("true", false),
      peg$c97 = "false",
      peg$c98 = peg$literalExpectation("false", false),
      peg$c99 = "+",
      peg$c100 = peg$literalExpectation("+", false),
      peg$c101 = "-",
      peg$c102 = peg$literalExpectation("-", false),
      peg$c103 = "/",
      peg$c104 = peg$literalExpectation("/", false),
      peg$c105 = "%",
      peg$c106 = peg$literalExpectation("%", false),
      peg$c107 = "<",
      peg$c108 = peg$literalExpectation("<", false),
      peg$c109 = ">",
      peg$c110 = peg$literalExpectation(">", false),
      peg$c111 = "<=",
      peg$c112 = peg$literalExpectation("<=", false),
      peg$c113 = ">=",
      peg$c114 = peg$literalExpectation(">=", false),
      peg$c115 = "==",
      peg$c116 = peg$literalExpectation("==", false),
      peg$c117 = "!=",
      peg$c118 = peg$literalExpectation("!=", false),
      peg$c119 = "===",
      peg$c120 = peg$literalExpectation("===", false),
      peg$c121 = "!==",
      peg$c122 = peg$literalExpectation("!==", false),
      peg$c123 = "&&",
      peg$c124 = peg$literalExpectation("&&", false),
      peg$c125 = "||",
      peg$c126 = peg$literalExpectation("||", false),
      peg$c127 = /^[ \t\r\n]/,
      peg$c128 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
      peg$c129 = "\n",
      peg$c130 = peg$literalExpectation("\n", false),
      peg$c131 = "\r\n",
      peg$c132 = peg$literalExpectation("\r\n", false),
      peg$c133 = "\r",
      peg$c134 = peg$literalExpectation("\r", false),
      peg$c135 = "\f",
      peg$c136 = peg$literalExpectation("\f", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsejoy();
    if (s2 === peg$FAILED) {
      s2 = peg$parsetext();
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsejoy();
      if (s2 === peg$FAILED) {
        s2 = peg$parsetext();
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsejoy() {
    var s0;

    s0 = peg$parsecomment();
    if (s0 === peg$FAILED) {
      s0 = peg$parseescape();
      if (s0 === peg$FAILED) {
        s0 = peg$parsedep();
        if (s0 === peg$FAILED) {
          s0 = peg$parsecondition();
          if (s0 === peg$FAILED) {
            s0 = peg$parseloop();
            if (s0 === peg$FAILED) {
              s0 = peg$parsefn();
              if (s0 === peg$FAILED) {
                s0 = peg$parsevariable();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsetext() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$currPos;
    peg$silentFails++;
    s4 = peg$parseJOY_START();
    peg$silentFails--;
    if (s4 === peg$FAILED) {
      s3 = void 0;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      if (input.length > peg$currPos) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      if (s4 !== peg$FAILED) {
        s3 = [s3, s4];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$currPos;
        peg$silentFails++;
        s4 = peg$parseJOY_START();
        peg$silentFails--;
        if (s4 === peg$FAILED) {
          s3 = void 0;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c1); }
          }
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c2();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseescape() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseJOY_START();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseJOY_START();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3();
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecomment() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseJOY_START();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 42) {
        s2 = peg$c4;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$currPos;
        peg$silentFails++;
        s6 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 42) {
          s7 = peg$c4;
          peg$currPos++;
        } else {
          s7 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s7 !== peg$FAILED) {
          s8 = peg$parseJOY_START();
          if (s8 !== peg$FAILED) {
            s7 = [s7, s8];
            s6 = s7;
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
        peg$silentFails--;
        if (s6 === peg$FAILED) {
          s5 = void 0;
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
        if (s5 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s6 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c1); }
          }
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$currPos;
          peg$silentFails++;
          s6 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 42) {
            s7 = peg$c4;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parseJOY_START();
            if (s8 !== peg$FAILED) {
              s7 = [s7, s8];
              s6 = s7;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
          peg$silentFails--;
          if (s6 === peg$FAILED) {
            s5 = void 0;
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
          if (s5 !== peg$FAILED) {
            if (input.length > peg$currPos) {
              s6 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c1); }
            }
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 42) {
            s4 = peg$c4;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseJOY_START();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c6();
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedep() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseJOY_START();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 6) === peg$c7) {
        s2 = peg$c7;
        peg$currPos += 6;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = [];
        s5 = peg$parseWS();
        if (s5 !== peg$FAILED) {
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parseWS();
          }
        } else {
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parsedepTerm();
          if (s5 !== peg$FAILED) {
            s6 = [];
            s7 = peg$parseWS();
            if (s7 !== peg$FAILED) {
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parseWS();
              }
            } else {
              s6 = peg$FAILED;
            }
            if (s6 !== peg$FAILED) {
              if (input.substr(peg$currPos, 4) === peg$c9) {
                s7 = peg$c9;
                peg$currPos += 4;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c10); }
              }
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parseWS();
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parseWS();
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsestring();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c11(s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedepTerm() {
    var s0, s1, s2, s3, s4, s5, s6;
